--- a/redspider/.classpath
+++ b/redspider/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/WisdomHouseLibs/junitLib/junit-4.10.jar"/>
-	<classpathentry kind="lib" path="/WisdomManager/WebContent/WEB-INF/lib/org.qq120011676.snow-0.4.beta5.jar"/>
+	<classpathentry kind="lib" path="G:/新建文件夹/org.qq120011676.snow-0.4.beta5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
