--- a/redspider/pom.xml
+++ b/redspider/pom.xml
@@ -5,7 +5,7 @@
  <modelVersion>4.0.0</modelVersion>
  <groupId>redspider</groupId>
  <artifactId>redspider</artifactId>
- <version>0.0.1-SNAPSHOT</version>
+ <version>0.0.1</version>
  <dependencies>
   <dependency>
    <groupId>junit</groupId>
